Add support for List.of(E...)
Also ensure invariant of no null elements is maintained in backport implementations.

Test: tools/test.py --no-internal -v *ListBackportJava9Test*
Change-Id: I5c77987b49db6ee8fc47d648a490143945efbeb0